# ood

lw1/SimUDuck/: CMakeLists.txt  SimUDuck.cpp
lw1/SimUDuck/docs/: CLASS_DIAGRAM.md
lw1/SimUDuck/lib/Duck/: Duck.h
lw1/SimUDuck/lib/Duck/Fly/: TriggeredQuackFlyBehavior.h
lw1/SimUDuck/test/: DanceBehaviorMock.h  DanceBehaviorTest.cpp  DuckTest.cpp  TriggeredQuackFlyBehaviorTest.cpp
lw1/SimUDuck/test/Mock/: MockDanceBehavior.h  MockFlyBehavior.h  MockQuackBehavior.h
lw1/SimUDuckFunctional/: CMakeLists.txt  main.cpp
lw1/SimUDuckFunctional/lib/Duck/: DecoyDuck.h  Duck.h  FunctionalBehaviors.h  MallardDuck.h  RedheadDuck.h
lw1/shapes/: go.mod
lw1/shapes/cmd/: main.go
lw1/shapes/docs/: ARHITECTURE.md
lw1/shapes/pkg/common/: consts.go  utils.go
lw1/shapes/pkg/shapes/: picture.go
lw2/weatherstation/: go.mod
lw2/weatherstation/cmd/: main.go
lw2/weatherstation/docs/: ARCHITECTURE.md
lw2/weatherstation/pkg/tests/: mockmultisourcerecoder.go  mockrecordingobserver.go  mockselfremovingobserver.go  priority_test.go  safetynotify_test.go  severalstations_test.go
lw3/coffee/: go.mod
lw3/coffee/cmd/: main.go
lw3/coffee/docs/: ARCHITECTURE.md
lw3/coffee/pkg/beverages/: beverage.go  cappuccino.go  coffee.go  latte.go  milkshake.go  tea.go
lw3/coffee/pkg/condiments/: chocolate.go  chocolatecrumbs.go  cinnamon.go  coconutflakes.go  condimentdecorator.go  cream.go  icecubes.go  lemon.go  liquor.go  syrup.go
lw3/coffee/pkg/model/: icecudetype.go  liquortype.go  portiondescriber.go  portiontype.go  sizedescriber.go  sizetype.go  syroptype.go  teatype.go
lw4/factory/: go.mod  house.txt
lw4/factory/cmd/: main.go
lw4/factory/docs/: ARCHITECTURE.md
lw4/factory/pkg/canvas/: canvas.go
lw4/factory/pkg/designer/: designer.go
lw4/factory/pkg/domain/: domain.go
lw4/factory/pkg/draft/: draft.go
lw4/factory/pkg/factory/: factory.go
lw4/factory/pkg/model/: color.go
lw4/factory/pkg/shapefactory/: shapefactory.go
lw5/editor/: go.mod
lw5/editor/cmd/: main.go
lw5/editor/docs/: ARCHITECTURE.md
lw5/robot/: go.mod
lw5/robot/cmd/: main.go
lw6/adapter/: go.mod
lw6/adapter/cmd/: main.go
lw6/adapter/docs/: ARCHITECTURE.md  ARCHITECTURE_CLASS_ADAPTER.md
lw7/slides/: go.mod
lw7/slides/cmd/: main.go
lw7/slides/docs/: ARCHITECTURE.md
lw8/gumballmachine/: go.mod
lw8/gumballmachine/cmd/: main.go
lw9/TiledImage/: CMakeLists.txt
lw9/TiledImage/docs/: Proxy.md
lw9/TiledImage/include/: cow.h  drawer.h  geom.h  image.h  tile.h
lw9/TiledImage/src/: drawer.cpp  image.cpp  main.cpp  tile.cpp
lw9/TiledImage/tests/: CMakeLists.txt  ImageTest.cpp  TileTest.cpp
(+117 files in other folders)
